--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,7 +1,8 @@
-// html, body {
-//   font-family: sans-serif;
-//   font-weight: lighter;
-// }
+@import './fonts/fonts.scss';
+
+html, body {
+  font-family: 'Lato';
+}
 
 .hidden {
   opacity: 0;
