--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -20,8 +20,15 @@ html, body {
   text-align: center;
 }
 
-.profile {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .75s
+}
+
+.fade-delayed-enter-active, .fade-delayed-leave-active {
+  transition: opacity .75s;
+  transition-delay: 0.75s
+}
+
+.fade-enter, .fade-leave-to, .fade-delayed-enter, .fade-delayed-leave-to {
+  opacity: 0
 }
