--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -2,9 +2,6 @@
 
 html, body {
   font-family: 'Lato';
-  background-image: url('./image/Background.png');
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .hidden {
@@ -43,3 +40,15 @@ html, body {
   opacity: 0;
   transition-delay: 0s
 }
+
+  .container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-image: url('./image/Background.png');
+    background-size: cover !important;
+    background-repeat: no-repeat;
+  }
